methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {def makehalfpattern(c:Color, d:Color) {setBrushColor(c); left(); forward(); brushDown(); brushUp(); right(); forward(); right(); forward(); brushDown(); brushUp(); setBrushColor(d); left(); forward(); brushDown(); brushUp(); forward(); left(); forward(); brushDown(); brushUp(); forward()}
^PatternPicture:1: error: expected start of definition
override def run() {def makehalfpattern(c:Color, d:Color) {setBrushColor(c); left(); forward(); brushDown(); brushUp(); right(); forward(); right(); forward(); brushDown(); brushUp(); setBrushColor(d); left(); forward(); brushDown(); brushUp(); forward(); left(); forward(); brushDown(); brushUp(); forward()}
         ^